--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "> API stands for Application Programming Interface, which is a set of definitions and protocols for building and integrating software. Simply put, they allow two pieces of software to communicate with each other through a pre-defined interface.",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon src/index.js"
+    "start": "npx nodemon src/index.js",
+    "test": "npx jest -i",
+    "api-docs": "npx serve docs",
+    "testdb:reset": "NODE_ENV=test npx prisma migrate reset --skip-seed"
   },
   "prisma": {
     "seed": "node prisma/seed.js"
@@ -21,14 +24,17 @@
   },
   "homepage": "https://github.com/boolean-uk/cinema-booking-api#readme",
   "devDependencies": {
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "serve": "^13.0.2",
+    "jest": "^28.1.1",
+    "supertest": "^6.2.3"
   },
   "dependencies": {
     "@prisma/client": "^3.8.1",
     "cors": "^2.8.5",
     "dotenv": "^14.2.0",
     "express": "^4.17.2",
-    "prisma": "^3.8.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "prisma": "^3.8.1"
   }
 }
